deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qcon-api
  labels:
    app: qcon-api
spec:
  selector:
    matchLabels:
      app: qcon-api
  replicas: 1
  template:
    metadata:
      labels:
        app: qcon-api
    spec:
      serviceAccountName: qcon-api
      containers:
        - name: qcon-api
          image: qcon-api
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          ports:
            - containerPort: 8000
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 30
          livenessProbe:                  
            tcpSocket:
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
          volumeMounts:
            - name: podinfo
              mountPath: /etc/podinfo
      volumes:
        - name: podinfo
          downwardAPI:
            items:
              - path: "annotations"
                fieldRef:
                  fieldPath: metadata.annotations
