deploy/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: qcon-api
  ports:
    - protocol: TCP
      port: 5432
  type: ClusterIP
